<resources>
    <string name="app_name">BoxingSpeed</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_name">用户名或手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_phone_num">手机号</string>
    <string name="prompt_email_username">邮箱或用户名</string>
    <string name="prompt_confirm_password">再次确认密码</string>
    <string name="prompt_passcode">输入收到的验证码</string>
    <string name="action_sign_in_register"><b>登 录</b></string>
    <string name="action_register"><b>注 册</b></string>
    <string name="action_sign_in_short">进入</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">正在登录&#8230;</string>
    <string name="register_progress_registering">正在注册&#8230;</string>
    <string name="error_invalid_email">用户名不合法</string>
    <string name="error_invalid_password">亲，密码太短了</string>
    <string name="error_incorrect_user">请检查用户名密码是否正确</string>
    <string name="error_name_required">请输入用户名</string>
    <string name="error_pwd_required">请输入密码</string>
    <string name="error_confirm_pwd_required">请再次输入相同的密码</string>
    <string name="error_confirm_pwd_mismatch">两次输入的密码不匹配，请重新输入</string>

    <string name="invalid_account">登录失败,请重试</string>
    <string name="internal_error">服务器内部错误，请联系管理员</string>
    <string name="unknown_error">位置错误，请联系开发者</string>
    <string name="invalid_network">请检查网络是否正常！</string>
    <string name="login_timeout">登陆超时,请重试</string>
    <string name="login_failed">登陆失败,请重试</string>
    <string name="action_kickout">用户在其他客户端登录</string>
    <string name="quick_register">邮箱注册</string>
    <string name="quick_register_title">使用邮箱快速注册</string>
    <string name="phone_login">手机登录</string>
    <string name="send_register_code">发送验证码</string>
    <string name="phone_login_title">使用手机号快速创建账号</string>

    <string name="start_boxing">开始测试</string>

    <!-- 主界面 -->
    <string name="main_boxing">测验</string>
    <string name="main_friends">好友</string>
    <string name="main_arena">对战</string>
    <string name="main_ranking">排行榜</string>
    <string name="main_profiler">我的</string>

    <!-- 通用顶部导航条 -->
    <string name="top_left_back">返回</string>

    <!-- 测试界面 -->
    <string name="boxing_time">记录时间</string>
    <string name="boxing_count">出拳次数</string>

    <!-- 好友界面 -->
    <string name="new_friend">新的朋友</string>
    <string name="default_nickname">不知道叫什么好</string>
    <string name="default_signature">你自己随便体会一下</string>

    <!-- 个人信息界面 -->
    <string name="notify_setting">通知设置</string>
    <string name="clear_cache">清理图片缓存</string>
    <string name="logout">退出登录</string>
    <string name="confirm_logout_tip">确定退出登录?</string>
    <string name="confirm_clear_cache">确定清理本地图片缓存？</string>
    <string name="detail_user_info">详细资料</string>
    <string name="detail_username">注册名</string>
    <string name="detail_nickname">昵称</string>
    <string name="detail_bind_phone">绑定手机</string>
    <string name="bind_one_phone">点击设置绑定手机</string>
    <string name="cannot_change_binding_phone">手机已绑定，要更改绑定手机，请联系客服MM</string>
    <string name="bind_phone_success">绑定手机成功</string>
    <string name="detail_gender">性别</string>
    <string name="detail_birth">出生日期</string>
    <string name="edit_birth_date">点击修改出生日期</string>
    <string name="detail_location">所在地区</string>
    <string name="edit_location_info">告诉大家你所在的城市吧</string>
    <string name="detail_signature">个性签名</string>
    <string name="edit_signature">我就是我，独一无二(点击修改)</string>
    <string name="save_profile_change">保存修改</string>
    <string name="saving_profile">正在保存修改</string>
    <string name="crop_head_image">头像裁剪</string>
    <string name="upload_avatar_success">上传头像成功</string>
    <string name="upload_avatar_failed">上传头像失败</string>

    <!-- 绑定手机号码界面 -->
    <string name="bind_phone_num">绑定</string>
    <string name="invalid_phonenum">输入的手机号码无效</string>
    <string name="resend_pass_code">重新发送</string>
    <string name="empty_pass_code">请输入收到的短信验证码</string>
    <string name="invalid_passcode">输入的验证码无效</string>
    <string name="passcode_sentout">验证码已发送</string>
    <string name="passcode_verify_success">验证码验证成功</string>
    <string name="passcode_verify_failed">验证失败</string>


    <!-- 网络对战界面 -->
    <string name="friend_arena">邀请好友对战</string>


    <!-- 通用弹出对话框 -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

</resources>
