<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.RegisterActivity">

    <!-- register form -->

    <FrameLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_bk">

        <!-- email register page -->
        <LinearLayout
            android:id="@+id/email_register_page"
            style="@style/FillWidthContainer"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/email_username"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_email_username"
                        android:inputType="text|textPersonName|textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />

                    <!--ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@+id/username"
                        android:layout_alignLeft="@+id/username"
                        android:layout_alignTop="@+id/username"
                        android:paddingLeft="10dp"
                        android:src="@drawable/login_user" /-->
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp">

                    <EditText
                        android:id="@+id/email_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_confirm_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/default_btn_bg"
                    android:text="@string/action_register"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- phone number register form -->
        <LinearLayout
            android:id="@+id/phone_number_register_page"
            style="@style/FillWidthContainer"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/phone_number_text"
                        android:layout_width="240dp"
                        android:layout_height="45dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_phone_num"
                        android:inputType="text|textPersonName|textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />

                    <!--ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@+id/username"
                        android:layout_alignLeft="@+id/username"
                        android:layout_alignTop="@+id/username"
                        android:paddingLeft="10dp"
                        android:src="@drawable/login_user" /-->

                    <Button
                        android:id="@+id/send_register_code"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignBottom="@+id/phone_number_text"
                        android:layout_alignTop="@+id/phone_number_text"
                        android:layout_toRightOf="@+id/phone_number_text"
                        android:layout_alignParentRight="true"

                        android:background="@drawable/default_btn_bg"
                        android:text="@string/send_register_code"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp">

                    <EditText
                        android:id="@+id/phone_pass_code_text"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/message_text_bg"
                        android:hint="@string/prompt_passcode"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textColorHint="@color/login_hint_color"
                        android:textSize="15sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/phone_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/default_btn_bg"
                    android:text="@string/action_register"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Register Progress page -->
    <LinearLayout
        android:id="@+id/register_status_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/half_transparent_light"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/register_progress_registering"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</merge>