<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 头像 + 性别-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <com.tealcode.boxingspeed.ui.widget.BaseImageView
            android:id="@+id/userinfo_portrait"
            android:layout_height="136dp"
            android:layout_width="136dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/default_user_portrait"
            />

        <ImageView
            android:id="@+id/userinfo_gender"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:gravity="center"
            android:background="@drawable/gender_female"
            />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_light_grey_color"
        android:gravity="center_vertical"
        android:shrinkColumns="1">

        <!-- User Name-->
        <TableRow
            android:layout_marginTop="0.5dp"
            android:background="@color/list_item_background">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_username"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:text=""
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                />
        </TableRow>

        <!-- Nickname -->
        <TableRow
            android:layout_marginTop="0.5dp"
            android:background="@color/list_item_background">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_nickname"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/userinfo_nickname"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:inputType="textPersonName"
                android:text="Nickname"
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                />
        </TableRow>

        <!-- Phone Number -->
        <TableRow android:id="@+id/userinfo_phone_row"
            android:background="@color/list_item_background"
            android:layout_marginTop="0.5dp">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_bind_phone"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/userinfo_phone_number"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:inputType="textPhonetic"
                android:text="18905327696"
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                />
        </TableRow>

        <!-- Birth -->
        <TableRow
            android:layout_marginTop="0.5dp"
            android:background="@color/list_item_background">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_birth"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/userinfo_birth"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:text="24"
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                />
        </TableRow>

        <!-- Location -->
        <TableRow
            android:layout_marginTop="0.5dp"
            android:background="@color/list_item_background">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_location"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/userinfo_location"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:text="shanghai"
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                />
        </TableRow>

        <!-- Signature -->
        <TableRow
            android:layout_margin="0.5dp"
            android:background="@color/list_item_background">
            <TextView
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="left|center_vertical"
                android:text="@string/detail_signature"
                android:textColor="@color/default_key_color"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/userinfo_signature"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:gravity="left|center_vertical"
                android:inputType="text"
                android:text=""
                android:textColor="@color/default_value_color"
                android:textSize="16sp"
                android:lines="2"
                />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/userinfo_command"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/default_btn_bg"
        android:textSize="16dp"
        android:text="发送消息"
        />


</LinearLayout>