<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/personal_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_bk"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/user_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ececec"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            >

            <com.tealcode.boxingspeed.ui.widget.BaseImageView
                android:id="@+id/user_portrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/default_user_portrait"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/user_portrait"
                android:gravity="center|center_vertical"
                android:layout_centerVertical="true"

                >

                <TextView
                    android:id="@+id/nickname_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nickname_text"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_light_grey_color"
                    android:textSize="14sp"
                    />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/default_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/divide_line"
            />

        <RelativeLayout
            android:id="@+id/setting_view"
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="@string/notify_setting" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/default_arrow"
                android:visibility="visible"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clear_cache_view"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="@string/clear_cache" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/default_arrow"
                android:visibility="gone"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/divide_line"
            />

        <!-- 退出登录 -->
        <RelativeLayout
            android:id="@+id/logout_view"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="@string/logout" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/default_arrow"
                android:visibility="gone"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/divide_line"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:indeterminateDuration="4000"
        android:visibility="visible" />

</RelativeLayout>